--- a/content/hw.html
+++ b/content/hw.html
@@ -141,9 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>About</h1>
-<p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
-<br /> <a href='hw.html'>Next</a> >> hw</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>hw</h1><br />About << <a href='About.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
       <div class="container">
